--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "coverage-ff": "start firefox \"%cd%\\coverage\\lcov-report\\index.html\"",
-    "coverage-chrome": "start chrome \"%cd%\\coverage\\lcov-report\\index.html\"",
+    "coverage-ff": "start firefox \"%cd%\\coverage\\index.html\"",
+    "coverage-chrome": "start chrome \"%cd%\\coverage\\index.html\"",
+    "src:build:w": "tsc -b src --watch",
     "src:build": "tsc -b src",
     "src:fix": "concurrently \"npm run src:format\" \"npm run src:lint\" \"npm run src:lint-test\" \"npm run src:build\" --max-processes 1",
     "src:format": "prettier --write \"**/*.+(js|jsx|ts|tsx)\"",
     "src:lint-test": "eslint --fix \"test/**\"",
     "src:lint": "eslint --fix \"src/**\"",
-    "start": "node dist/app.js",
-    "test": "vitest"
+    "start": "node dist/index.js",
+    "test": "vitest --coverage"
   },
   "repository": {
     "type": "git",
